BuilderMetadataServiceImpl filter out non-static member classes but not static member classes